# orchids_detector_service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  example_usage.py  pyproject.toml  requirements.txt  start.sh  wsgi.py
app/: __init__.py  main.py
app/models/: __init__.py  orchid_detector.py
app/routes/: __init__.py  api.py
app/utils/: __init__.py  file_utils.py
src/: main.py
src/api/: deps.py
src/api/v1/: routes.py  schemas.py
src/config/: config.py  model_config.yaml
src/core/: inference.py
src/ml/: model_builder.py  train.py
src/ml/models/: model.py  predictor.py
src/utils/: logging.py  tools.py
templates/: index.html
tests/: test_api.py  test_file_utils.py  test_inference.py  test_orchid_detector.py
